# git-gud

./: .gitignore  Cargo.toml  LICENSE  README.md  com.github.tiago_vargas.git_gud.json  meson.build
data/: com.github.tiago_vargas.git_gud.desktop.in  com.github.tiago_vargas.git_gud.gschema.xml  com.github.tiago_vargas.git_gud.metainfo.xml.in  meson.build
data/icons/: meson.build
src/: app.rs  config.rs  config.rs.in  git-gud.gresource.xml  main.rs  meson.build
src/app/: actions.rs  branch_row.rs  commit_row.rs  content.rs  log.rs  modals.rs  settings.rs
src/app/content/: diff.rs  log.rs  status.rs
src/app/content/log/: commit_row.rs
src/app/content/status/: changed_files_row.rs
src/app/modals/: about.rs  help.rs  preferences.rs
