[package]
name = "git-gud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git = { version = "0.18.3", package = "git2" }
libadwaita = { version = "0.6.0", features = ["v1_5"] }
relm4 = { version = "0.8.1", features = ["libadwaita", "gnome_46"] }
source = { version = "0.8.0", package = "sourceview5" }
